hoan thien giao dien

--- a/QuanLyCuaHang.WinForm/QuanLyCuaHang.PresentationLayer.csproj
+++ b/QuanLyCuaHang.WinForm/QuanLyCuaHang.PresentationLayer.csproj
@@ -255,11 +255,11 @@
     <Compile Include="Account.Designer.cs">
       <DependentUpon>Account.cs</DependentUpon>
     </Compile>
-    <Compile Include="Admin.cs">
+    <Compile Include="Administer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include=".Designer.cs">
-      <DependentUpon>Admin.cs</DependentUpon>
+      <DependentUpon>Administer.cs</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormManager.cs">
@@ -284,8 +284,8 @@
     <EmbeddedResource Include="Account.resx">
       <DependentUpon>Account.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Admin.resx">
-      <DependentUpon>Admin.cs</DependentUpon>
+    <EmbeddedResource Include="Administer.resx">
+      <DependentUpon>Administer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormManager.resx">
       <DependentUpon>FormManager.cs</DependentUpon>
