--- a/QuanLyCuaHang.WinForm/QuanLyCuaHang.PresentationLayer.csproj
+++ b/QuanLyCuaHang.WinForm/QuanLyCuaHang.PresentationLayer.csproj
@@ -249,11 +249,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs">
+    <Compile Include="AccountProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Account.Designer.cs">
-      <DependentUpon>Account.cs</DependentUpon>
+    <Compile Include="AccountProfile.Designer.cs">
+      <DependentUpon>AccountProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="Administer.cs">
       <SubType>Form</SubType>
@@ -281,8 +281,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QuanLyCuaHangDataSet.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Account.resx">
-      <DependentUpon>Account.cs</DependentUpon>
+    <EmbeddedResource Include="AccountProfile.resx">
+      <DependentUpon>AccountProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Administer.resx">
       <DependentUpon>Administer.cs</DependentUpon>
